# spinnerthing

./: Cargo.toml  index.html  spinnerthing-e4d7ff5cdf8700a4.js  spinnerthing-e4d7ff5cdf8700a4_bg.wasm  sw.js
.github/workflows/: pages.yml  rust.yml
src/: app.rs  main.rs
