[package]
name = "spinnerthing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.23.0", features = ["wayland"] }
egui_plot = "0.23.0"
log = "0.4.20"
wasm-bindgen-futures = "0.4.38"
